--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	me-no-dev/AsyncTCP@^1.1.1
+	me-no-dev/ESP Async WebServer@^1.1.1
 	ottowinter/ESPAsyncWebServer-esphome@^3.2.2
+	bblanchon/ArduinoJson@^7.1.0
 monitor_speed = 115200
